Fixed alignmet of like button and like text

--- a/client/style.scss
+++ b/client/style.scss
@@ -426,6 +426,10 @@ $autocolor: false // When true, all the above colors will be derived from $backg
     padding-right: 0.5em;
   }
 
+  #like-btn {
+    
+  }
+
   .active {
 
   }
